--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   http: ^1.3.0
   flutter_dotenv: ^5.2.1
   flutter_secure_storage: ^9.2.4
+  path_provider: ^2.1.5
 
 dev_dependencies:
   flutter_test:
