--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   flutter_dotenv: ^5.2.1
   flutter_secure_storage: ^9.2.4
   path_provider: ^2.1.5
+  google_mobile_ads: ^5.3.1
 
 dev_dependencies:
   flutter_test:
