--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   path_provider: ^2.1.5
   google_mobile_ads: ^5.3.1
   flutter_launcher_icons: ^0.14.3
+  url_launcher: ^6.3.1
 
 dev_dependencies:
   flutter_test:
